# czech-file-knife

./: .editorconfig  .gitignore  .guix-channel  AGENTIC.scm  CITATION.cff  Cargo.toml  Containerfile  Dockerfile  ECOSYSTEM.scm  META.scm  Makefile  NEUROSYM.scm  PLAYBOOK.scm  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  STATE.scm  TESTING-REPORT.adoc  TESTING-REPORT.scm  codemeta.json  deny.toml  flake.nix  guix.scm  justfile
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/workflows/: cargo-security.yml  cflite_batch.yml  codeql.yml  comprehensive-quality.yml  container.yml  ghcr-publish.yml  guix-nix-policy.yml  publish.yml  quality.yml  release.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
benches/: czech_file_knife_bench.rs
cfk-cache/: Cargo.toml
cfk-cache/src/: blob_store.rs  lib.rs  metadata_cache.rs  policy.rs  sled_backend.rs
cfk-cli/: Cargo.toml
cfk-cli/src/: commands.rs  main.rs
cfk-core/: Cargo.toml
cfk-core/src/: backend.rs  entry.rs  error.rs  lib.rs  metadata.rs  operations.rs  path.rs  platform.rs
cfk-integrations/: Cargo.toml
cfk-integrations/src/: agrep.rs  aria2.rs  lib.rs  pandoc.rs
cfk-ios/: Cargo.toml
cfk-ios/src/: domain.rs  error.rs  ffi.rs  item.rs  lib.rs  provider.rs
cfk-ios/swift/: CfkBridge.h  CfkFileProviderExtension.swift  CfkFileProviderItem.swift
cfk-providers/: Cargo.toml
cfk-providers/src/: afs.rs  box_com.rs  ceph.rs  dropbox.rs  gdrive.rs  ipfs.rs  lib.rs  local.rs  nfs.rs  ninep.rs  onedrive.rs  protocols.rs  s3.rs  sftp.rs  smb.rs  syncthing.rs  transport.rs  webdav.rs
cfk-search/: Cargo.toml
cfk-search/src/: lib.rs
cfk-tui/: cfk_tui.gpr
cfk-tui/src/: cfk-tui-application.ads  cfk_tui_main.adb
cfk-vfs/: Cargo.toml
cfk-vfs/src/: lib.rs
docs/: CITATIONS.adoc  DISTRIBUTED_FILESYSTEMS.md  IOS_INTEGRATION.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_path.rs
manifest/: sample.ncl
ops/: podman-compose.yml
ops/scripts/: ensure_deps.sh  ensure_kafka.sh
packaging/arch/: PKGBUILD
packaging/chocolatey/: czech-file-knife.nuspec
packaging/debian/: control  rules
packaging/flatpak/: dev.hyperpolymath.CzechFileKnife.yml
packaging/macports/: Portfile
packaging/rpm/: czech-file-knife.spec
packaging/winget/: czech-file-knife.yaml
