[workspace]
resolver = "2"
members = [
    "cfk-core",
    "cfk-providers",
    "cfk-cache",
    "cfk-search",
    "cfk-vfs",
    "cfk-cli",
    "cfk-integrations",
    "cfk-ios",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/czech-file-knife"
authors = ["hyperpolymath"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP & Auth
reqwest = { version = "0.11", features = ["json", "stream"] }
oauth2 = "5.0"

# Hashing & Compression
blake3 = "1.5"
lz4_flex = "0.11"
hex = "0.4"

# Time & Errors
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
tabled = "0.15"
bytesize = "1.3"

# Storage
sled = "0.34"
directories = "5.0"

# Search
fuzzy-matcher = "0.3"
tantivy = "0.22"
glob = "0.3"
regex = "1.10"
walkdir = "2.4"
ignore = "0.4"
infer = "0.15"

# FUSE
fuser = "0.16"
parking_lot = "0.12"
dashmap = "5.5"

# Bytes
bytes = "1.5"

# FFI
libc = "0.2"
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization formats
rmp-serde = "1.1"           # MessagePack
ciborium = "0.2"            # CBOR
prost = "0.12"              # Protocol Buffers
capnp = "0.18"              # Cap'n Proto
flatbuffers = "23.5"        # FlatBuffers
