[package]
name = "cfk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Czech File Knife"

[[bin]]
name = "cfk"
path = "src/main.rs"

[dependencies]
cfk-core = { path = "../cfk-core" }
cfk-providers = { path = "../cfk-providers" }

# CLI
clap.workspace = true
console.workspace = true
indicatif.workspace = true
tabled.workspace = true
bytesize.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Time
chrono.workspace = true

# Bytes
bytes.workspace = true
