[package]
name = "cfk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Czech File Knife"

[[bin]]
name = "cfk"
path = "src/main.rs"

[dependencies]
cfk-core = { path = "../cfk-core" }
cfk-providers = { path = "../cfk-providers" }

# CLI
clap.workspace = true
console.workspace = true
indicatif.workspace = true
tabled.workspace = true
bytesize.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Time
chrono.workspace = true

# Bytes
bytes.workspace = true

# Packaging metadata for cargo-deb
[package.metadata.deb]
maintainer = "hyperpolymath <packages@hyperpolymath.dev>"
copyright = "2025, hyperpolymath"
license-file = ["../LICENSE", "0"]
extended-description = """
Czech File Knife (cfk) is a universal file management toolkit with cloud
provider integration and virtual filesystem support. It provides a unified
interface for managing files across local storage and cloud providers.
"""
depends = "$auto, fuse3"
section = "utils"
priority = "optional"
assets = [
    ["target/release/cfk", "usr/bin/", "755"],
    ["../README.adoc", "usr/share/doc/czech-file-knife/README.adoc", "644"],
]

# Packaging metadata for cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cfk", dest = "/usr/bin/cfk", mode = "755" },
    { source = "../README.adoc", dest = "/usr/share/doc/czech-file-knife/README.adoc", mode = "644" },
]

[package.metadata.generate-rpm.requires]
fuse3 = "*"
