[package]
name = "cfk-integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "External tool integrations: aria2, agrep, pandoc, OCR, eza"

[features]
default = []
aria2 = []
agrep = []
pandoc = []
ocr = ["tesseract"]
tesseract = []
eza = []
all = ["aria2", "agrep", "pandoc", "ocr", "eza"]

[dependencies]
cfk-core = { path = "../cfk-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true
regex.workspace = true
