# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "czech-file-knife-fuzz"
version = "0.0.0"
authors = ["hyperpolymath"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.cfk-core]
path = "../cfk-core"

[[bin]]
name = "fuzz_path"
path = "fuzz_targets/fuzz_path.rs"
test = false
doc = false
bench = false
